# game-couch

./: .gitignore  AGENTS.md  AGENT_WORKFLOW.md  PROJECT.md  README.md  ROADMAP.md  TESTING.md  pyproject.toml
docs/: plugins.md  testable-stage-plan.md
docs/adr/: 0001-testable-stage-rtc-and-runner-boundary.md  README.md
docs/evals/: README.md  testable-couch-session.md
src/game_couch/: cli.py  journal.py  models.py  paths.py  runner.py  service.py  transport.py
src/game_couch/plugins/: base.py  generic_screen.py  registry.py
tests/: test_cli.py  test_journal_transport.py  test_models.py  test_plugins.py  test_runner.py
